# Pulsar

./: .gitignore  Cargo.toml  LIMITATION.md  NOTES  TODO.md  TODOS  TODOS.md
assets/shaders/: shader.frag  shader.vert
examples/: example.rs  triangle.rs
src/: app.rs  camera.rs  debugging.rs  input_manager.rs  lib.rs  metrics.rs  model.rs  shaders.rs  vulkan.rs  vulkan_callback.rs  window.rs  window_state.rs
src/vulkan/: command_buffers.rs  command_pools.rs  debug_callback.rs  descriptor_set.rs  device.rs  fence_semaphores.rs  framebuffer.rs  graphics.rs  instance.rs  pipeline.rs  record.rs  renderpass.rs  surface.rs  surface_resources.rs  swapchain.rs  uniform.rs  views.rs
