[package]
name = "nhope"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
winit = { version = "0.29", features = ["rwh_06"] }
# The examples require the validation layers, which means the SDK or
# equivalent development packages should be present, so we can link
# directly and benefit from the infallible `Entry` constructor.
ash = { version = "0.38", default-features = false, features = [
	"linked",
	"debug",
	"std",
] }
ash-window = { version = "0.13.0" }
log = "0.4.21"
env_logger = "0.11.3"
rand = "0.8.5"
