[package]
name = "nhope"
version = "0.1.0"
edition = "2021"

[dependencies]
# vulkan
ash-window = { version = "0.13.0" }
ash = { version = "0.38", default-features = false, features = [
	# The examples require the validation layers, which means the SDK or
	# equivalent development packages should be present, so we can link
	# directly and benefit from the infallible `Entry` constructor.
	"linked",
	"debug",
	"std",
] }
# windowing
winit = { version = "0.30.0", features = ["rwh_06"] }
cursor-icon = "1.1.0"
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"] }
# math
glam = "0.27.0"
# profiling
profiling = "1.0.15"
# engine
image = "0.25"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"

[features]
# profiling
profile-with-optick = ["profiling/profile-with-optick"]
